PN-17862: fix F24 file retrieval and handle cache conflicts with retries.